--- a/TheDetails.html
+++ b/TheDetails.html
@@ -94,6 +94,13 @@
             padding: 20px;
             position: relative;
         }
+        .text-box img.campsite {
+            width: 100%;
+            max-width: 300px;
+            height: auto;
+            display: block;
+            margin: 0 auto 20px;
+        }
         .text-box h2 {
             font-size: 28px;
             font-family: 'Roadster', sans-serif;
@@ -187,12 +194,27 @@
             <li><a href="RSVP.html">RSVP</a></li>
         </ul>
     </nav>
+
     <h1 class="title">The Details</h1>
+
     <div class="details-container">
         <div class="text-box">
             <img src="images/campsite.png" alt="Campsite Illustration" class="campsite">
+
             <h2>Arrival and Parking</h2>
             <p>If you are attending in person, please bring your invitation or mention you are here for the Teboe wedding at the gatehouse entrance.</p>
+            <p>Two large parking areas, circled on the park map below, are available for your convenience. The path from the parking lot to the ceremony site is relatively short but involves rough terrain, including gravel and grass. Please wear appropriate footwear, and let us know in advance if you require on-site transportation assistance.</p>
+
+            <h2>Ceremony & Reception</h2>
+            <p>The ceremony will take place outdoors, rain or shine. Handheld fans will be provided during the ceremony, and electric fans will be available at the reception to keep you cool.</p>
+            <p>Join us afterward for drinks, dinner, and celebration! Both the ceremony and reception will be held outdoors, with minimal cover at the ceremony site. Please prepare for weather conditions like rain or sun. All events are within walking distance of each other at Bull Run Regional Park. Transportation assistance, such as utility carts, can be available for guests who may need it. Please notify us beforehand.</p>
+
+            <h2>Attire</h2>
+            <p>Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.</p>
+            <p>We recommend flat or sturdy shoes, such as boots, wedges, or sandals, as the terrain consists of gravel paths and grassy areas. Thin heels or stilettos may not be ideal for the outdoor setting.</p>
+
+            <h2>RSVP</h2>
+            <p>Please RSVP by <span>August 1st</span> at the latest!</p>
         </div>
         <div class="timeline">
             <a href="images/Timeline.png" target="_blank">
