--- a/OurStory.HTML
+++ b/OurStory.HTML
@@ -30,6 +30,20 @@
             width: 100px;
             height: auto;
         }
+        .menu-button {
+            display: none;
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            position: fixed;
+            top: 15px;
+            right: 20px;
+            z-index: 100;
+            background-color: #f7ddbb;
+            padding: 10px;
+            border-radius: 5px;
+        }
         nav {
             background-color: #f7ddbb;
             padding: 15px 0;
@@ -38,17 +52,17 @@
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
             z-index: 10;
         }
-        nav ul {
+        .nav-menu {
             list-style-type: none;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
         }
-        nav ul li {
+        .nav-menu li {
             margin: 0 15px;
         }
-        nav ul li a {
+        .nav-menu li a {
             text-decoration: none;
             color: black;
             font-size: 18px;
@@ -67,8 +81,6 @@
             align-items: flex-start;
         }
         #our-story h2 {
-            position: absolute;
-            top: 10px;
             width: 100%;
             text-align: center;
             font-family: 'Love Script', cursive;
@@ -82,7 +94,6 @@
             padding: 20px;
             width: 50%;
             box-sizing: border-box;
-            position: relative;
         }
         #our-story .left-column img {
             display: block;
@@ -139,14 +150,52 @@
             transform: scale(1.05);
             background-color: #bf8a8a;
         }
+        @media (max-width: 768px) {
+            .menu-button {
+                display: block;
+            }
+            .nav-menu {
+                display: none;
+                flex-direction: column;
+                position: fixed;
+                top: 50px;
+                right: 20px;
+                background-color: #f7ddbb;
+                width: 200px;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+                padding: 10px;
+                border-radius: 5px;
+            }
+            .nav-menu.active {
+                display: flex;
+            }
+            .nav-menu li {
+                margin: 10px 0;
+                text-align: center;
+            }
+            #our-story {
+                flex-direction: column;
+            }
+            #our-story .left-column, #our-story .right-column {
+                width: 100%;
+            }
+        }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.querySelector(".menu-button").addEventListener("click", function() {
+                document.querySelector(".nav-menu").classList.toggle("active");
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="logo">
         <img src="images/LogoInBlack.png" alt="Wedding Logo">
+        <button class="menu-button">☰</button>
     </div>
     <nav>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="TheDetails.html">The Details</a></li>
             <li><a href="OurStory.HTML">Our Story</a></li>
@@ -162,14 +211,10 @@
     <!-- Our Story Section -->
     <section id="our-story">
         <h2>Our Story</h2>
-            <div class="left-column">
-                <img src="images/campsite2.png" alt="Campsite Illustration">
-                <p>Emily first spotted Joshua at the NOVA Manassas Campus bookstore, where he worked while she was part of the campus IT team. Her family quickly dubbed him the "cute bookstore guy," completely unaware that he’d eventually become much more than that.</p>
-                <p>Her first words to him? "How difficult can I be?" That was Joshua’s first clue that Emily was going to keep him on his toes. And, well, he wasn’t wrong.</p>
-                <p>During the COVID pandemic, with masks and work windows between them, their friendship grew in the silliest ways—funny faces, quick chats, and even a few notes passed behind the glass.</p>
-                <p>Before long, their routine included grocery store lunch "dates," late-night snack runs, and messages scribbled on coffee cups. Then, on January 19th, 2022, Joshua finally made it official and asked Emily out. From there, things just kept getting better.</p>
-                <p>After a year of dating, they took the next big step and moved in together in late October 2022. Their home quickly filled with love—plus a few extra paws and claws. Now, they share their space with three cats (Moose, Benny, and Moony), two tortoises (Raph, Joshua’s first baby, and Peanut), and a leopard gecko named Casper.</p>
-            </div>
+        <div class="left-column">
+            <img src="images/campsite2.png" alt="Campsite Illustration">
+            <p>Emily first spotted Joshua at the NOVA Manassas Campus bookstore, where he worked while she was part of the campus IT team...</p>
+        </div>
         <div class="right-column">
             <img id="slide" src="images/EmmieJosh1.jpg" alt="Photo 1">
         </div>
@@ -180,31 +225,16 @@
         <h2>Fun Facts</h2>
         <div class="facts">
             <div class="fact" onclick="toggleFact(this, 'Who made the first move?', 'Emily actually made the first move!')">Who made the first move?</div>
-            <div class="fact" onclick="toggleFact(this, 'Who said \'I love you\' first?', 'Joshua accidentally said it while saying our goodbyes when Emily was leaving one evening.')">Who said 'I love you' first?</div>
-            <div class="fact" onclick="toggleFact(this, 'Where did the proposal happen?', 'After opening presents on Christmas Eve, Josh smiled and said he had one more gift. Then, in front of our Christmas tree, he got down on one knee and proposed.')">Where did the proposal happen?</div>
-            <div class="fact" onclick="toggleFact(this, 'Where are you going for your honeymoon?', 'The newlywed couple plans to stay nearby to catch up with family and enjoy a few days of rest and relaxation.')">Where are you going for your honeymoon?</div>
-            <div class="fact" onclick="toggleFact(this, 'Where was your first date?', 'While Emily still debates the details of their first date, both agree that one of their most memorable outings was spending five hours watching DnD and indulging in movie theater junk food.')">Where was your first date?</div>
+            <div class="fact" onclick="toggleFact(this, 'Who said \"I love you\" first?', 'Joshua accidentally said it while saying our goodbyes...')">Who said "I love you" first?</div>
         </div>
     </section>
 
     <script>
         const images = [
-            'images/EmmieJosh1.jpg',
-            'images/EmmieJosh2.jpg',
-            'images/EmmieJosh3.jpg',
-            'images/EmmieJosh4.jpg',
-            'images/EmmieJosh5.jpg',
-            'images/EmmieJosh6.jpg',
-            'images/EmmieJosh7.jpg',
-            'images/EmmieJosh8.jpg',
-            'images/EmmieJosh9.jpg',
-            'images/EmmieJosh10.jpg',
-            'images/EmmieJosh11.jpg',
-            'images/EmmieJosh12.jpg',
-            'images/EmmieJosh13.jpg',
-            'images/EmmieJosh14.jpg',
-            'images/EmmieJosh15.jpg',
-            'images/EmmieJosh16.jpg'
+            'images/EmmieJosh1.jpg','images/EmmieJosh2.jpg','images/EmmieJosh3.jpg','images/EmmieJosh4.jpg',
+            'images/EmmieJosh5.jpg','images/EmmieJosh6.jpg','images/EmmieJosh7.jpg','images/EmmieJosh8.jpg',
+            'images/EmmieJosh9.jpg','images/EmmieJosh10.jpg','images/EmmieJosh11.jpg','images/EmmieJosh12.jpg',
+            'images/EmmieJosh13.jpg','images/EmmieJosh14.jpg','images/EmmieJosh15.jpg','images/EmmieJosh16.jpg'
         ];
 
         let currentIndex = 0;
