--- a/Gallery.html
+++ b/Gallery.html
@@ -27,31 +27,45 @@
             position: relative;
             top: 0;
             width: 100%;
-            z-index: 20; /* Ensures logo stays above other elements */
+            z-index: 20;
         }
         .logo img {
             width: 100px;
             height: auto;
         }
+        .menu-button {
+            display: none;
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            position: fixed;
+            top: 15px;
+            right: 20px;
+            z-index: 100;
+            background-color: #f7ddbb;
+            padding: 10px;
+            border-radius: 5px;
+        }
         nav {
             background-color: #f7ddbb;
             padding: 15px 0;
-            position: relative; /* Navbar is now placed below the logo */
+            position: relative;
             width: 100%;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
             z-index: 10;
         }
-        nav ul {
+        .nav-menu {
             list-style-type: none;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
         }
-        nav ul li {
+        .nav-menu li {
             margin: 0 15px;
         }
-        nav ul li a {
+        .nav-menu li a {
             text-decoration: none;
             color: black;
             font-size: 18px;
@@ -76,17 +90,49 @@
             display: block;
             margin: 40px auto 0;
             width: 100%;
-            max-width: 100%;
+            max-width: 1200px;
             height: auto;
         }
+        @media (max-width: 768px) {
+            .menu-button {
+                display: block;
+            }
+            .nav-menu {
+                display: none;
+                flex-direction: column;
+                position: fixed;
+                top: 50px;
+                right: 20px;
+                background-color: #f7ddbb;
+                width: 200px;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+                padding: 10px;
+                border-radius: 5px;
+            }
+            .nav-menu.active {
+                display: flex;
+            }
+            .nav-menu li {
+                margin: 10px 0;
+                text-align: center;
+            }
+        }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.querySelector(".menu-button").addEventListener("click", function() {
+                document.querySelector(".nav-menu").classList.toggle("active");
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="logo">
         <img src="images/LogoInBlack.png" alt="Wedding Logo">
+        <button class="menu-button">☰</button>
     </div>
     <nav>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="TheDetails.html">The Details</a></li>
             <li><a href="OurStory.HTML">Our Story</a></li>
