--- a/TheDetails.html
+++ b/TheDetails.html
@@ -210,7 +210,7 @@
             <p>Join us afterward for drinks, dinner, and celebration! Both the ceremony and reception will be held outdoors, with minimal cover at the ceremony site. Please prepare for weather conditions like rain or sun. All events are within walking distance of each other at Bull Run Regional Park. Transportation assistance, such as utility carts, can be available for guests who may need it. Please notify us beforehand.</p>
 
             <h2>Attire</h2>
-            <p>Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.</p>
+            <p>Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Do not feel obligated to dress up! A nice shirt and jeans are perfect. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.</p>
             <p>We recommend flat or sturdy shoes, such as boots, wedges, or sandals, as the terrain consists of gravel paths and grassy areas. Thin heels or stilettos may not be ideal for the outdoor setting.</p>
 
             <h2>RSVP</h2>
