--- a/QA.html
+++ b/QA.html
@@ -151,7 +151,122 @@
     </nav>
 
     <h1 class="title">Q & A</h1>
-
-    <div class="faq-container">
-        <!-- Existing FAQ blocks here -->
-        <!-- Unchanged content -->
+ 
+     <div class="faq-container">
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq1')">What should I wear?</div>
+             <div class="faq-details" id="faq1">
+                 Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq2')">What type of shoes should I wear?</div>
+             <div class="faq-details" id="faq2">
+                 We recommend wearing flat shoes or comfortable footwear, as the terrain consists mostly of gravel paths and grassy areas. Stilettos or thin heels may not be ideal for navigating the outdoor setting. Opt for wedges, sandals, or even cute boots that fit the camp vibe!
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq3')">Are kids allowed?</div>
+             <div class="faq-details" id="faq3">
+                 Yes, kids are welcome at our wedding! We want the celebration to be fun for guests of all ages. There will be activities and plenty of space for everyone to enjoy themselves. However, if you need a quiet space for naps or downtime, we will do our best to have a designated area available.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq4')">Is everything in the same location?</div>
+             <div class="faq-details" id="faq4">
+                 Yes, all events—including the ceremony, reception, and any additional activities—will be within walking distance of each other at Bull Run Regional Park. For guests who may have difficulty walking longer distances, we will provide transportation assistance, such as utility carts, to ensure everyone can move comfortably between locations.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq5')">How should I RSVP?</div>
+             <div class="faq-details" id="faq5">
+                 The link to RSVP is available on the homepage, as a tab in the top bar as well as HERE <insert link>.  Your timely response is greatly appreciated so we can plan accordingly!
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq6')">Will the wedding be indoors or outdoors?</div>
+             <div class="faq-details" id="faq6">
+                 Both the ceremony and reception will be outdoors, so plan accordingly for weather.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq7')">What happens if it rains?</div>
+             <div class="faq-details" id="faq7">
+                 We have a covered area for the reception, and the ceremony will take place rain or shine. Pack an umbrella just in case!
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq8')">What time should I arrive?</div>
+             <div class="faq-details" id="faq8">
+                 We recommend arriving 15-30 minutes before the ceremony begins to allow time for parking and getting settled at the ceremony site.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq9')">Will there be food and drinks?</div>
+             <div class="faq-details" id="faq9">
+                 Yes! A variety of delicious food and beverages will be served at the reception. Our menu will feature a tapas bar, including options for guests with dietary restrictions. If you have any specific dietary needs, please let us know in advance.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq10')">Is there a dress code for children?</div>
+             <div class="faq-details" id="faq10">
+                 Children are welcome to dress comfortably for the outdoor setting. Think casual attire that allows them to move freely and enjoy the day!
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq11')">What is the parking situation?</div>
+             <div class="faq-details" id="faq11">
+                 Two large parking areas are available and marked on the park map. Signs and people will be located nearby to guide you as needed. If you require assistance getting to the ceremony site, transportation options like utility carts will be available.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq12')">What should I bring with me?</div>
+             <div class="faq-details" id="faq12">
+                 We recommend bringing items such as sunglasses, sunscreen, and an umbrella for unexpected weather. Handheld fans will be provided at the ceremony for hot weather.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq13')">Can I take photos during the ceremony?</div>
+             <div class="faq-details" id="faq13">
+                 We kindly ask that guests enjoy the moment with us and refrain from using their phones or cameras during the ceremony. A professional photographer will capture all the special moments, and we’ll share these photos with you later.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq14')">Will there be assigned seating?</div>
+             <div class="faq-details" id="faq14">
+                 Seating will be open at both the ceremony, so feel free to sit where you’re most comfortable! At the reception, we’ll have assigned 'teams' to help organize activities and make the fun even better.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq15')">Is alcohol being served?</div>
+             <div class="faq-details" id="faq15">
+                 No, alcohol will not be served. Water, soda, and a few custom non-alcoholic drinks will be available. Please note that the park does not allow alcohol on the premises.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq16')">What should I do if I have mobility issues or special needs?</div>
+             <div class="faq-details" id="faq16">
+                 We are happy to accommodate any special needs! Please let us know ahead of time if you require assistance or specific accommodations.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq17')">Are gifts expected?</div>
+             <div class="faq-details" id="faq17">
+                 Your presence at our wedding is the greatest gift of all! Your love, support, and presence mean the world to us as we embark on this exciting journey together. If you would like to help us build our new life, we have created a home fund that will go towards the purchase of our new home, as well as furniture and other essentials to make it our own. Please know that your contribution is greatly appreciated, but your presence at our celebration is the most important gift of all.
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq18')">Will there be a first dance or other planned activities?</div>
+             <div class="faq-details" id="faq18">
+                 A first dance is not planned, but there will be toasts, music, and other fun activities to celebrate our special day!
+             </div>
+         </div>
+         <div class="faq">
+             <div class="faq-summary" onclick="toggleFAQ('faq19')">Can I stay overnight at Bull Run Regional Park?</div>
+             <div class="faq-details" id="faq19">
+                 While we do not provide accommodations directly on-site, there are nearby hotels and camping options - including cabins - at Bull Run Regional Park for those who’d like to stay close. Feel free to reach out if any you would like any recommendations or need assistance with accommodations. 
+             </div>
+         </div>
+     </div>
+ </body>
+ </html>
