--- a/QA.html
+++ b/QA.html
@@ -156,7 +156,7 @@
          <div class="faq">
              <div class="faq-summary" onclick="toggleFAQ('faq1')">What should I wear?</div>
              <div class="faq-details" id="faq1">
-                 Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.
+                 Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Do not feel obligated to dress up! A nice shirt and jeans are perfect! Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.
              </div>
          </div>
          <div class="faq">
