--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         }
         .date, .location {
             font-size: clamp(20px, 5vw, 32px);
+            font-family: Georgia, serif; /* Added to match RSVP text */
         }
         .rsvp-button {
             margin-top: 20px;
