--- a/Gallery.html
+++ b/Gallery.html
@@ -71,28 +71,34 @@
             font-size: 18px;
             font-family: Georgia, serif;
         }
-        .title {
-            font-family: 'Love Script', cursive;
-            font-size: 3rem;
-            font-weight: bold;
-            text-align: center;
-            margin-top: 20px;
+
+        /* ===== Gallery Embed ===== */
+        .gallery-wrap {
+            max-width: 1200px;
+            margin: 20px auto 0;
+            padding: 0 16px;
         }
-        .text-box {
-            font-family: Georgia, serif;
-            font-size: 1.5rem;
-            text-align: center;
-            margin: 20px auto;
-            max-width: 80%;
-            color: #6b4f4f;
+        .pa-gallery-player-widget {
+            width: 100%;
+            height: 70vh;         /* good default “fit to page” */
+            min-height: 420px;    /* ensures usability on short screens */
+            display: none;        /* PublicAlbum toggles to block when ready */
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 6px 14px rgba(0,0,0,0.08);
         }
+
+        /* ===== Bottom Image (Kitties) ===== */
         .flower-image {
             display: block;
-            margin: 40px auto 0;
+            margin: 32px auto 24px; /* space above and below */
             width: 100%;
             max-width: 1200px;
             height: auto;
+            padding: 0 16px;
         }
+
+        /* ===== Mobile ===== */
         @media (max-width: 768px) {
             .menu-button {
                 display: block;
@@ -116,21 +122,33 @@
                 margin: 10px 0;
                 text-align: center;
             }
+            .pa-gallery-player-widget {
+                height: 65vh;   /* a bit shorter on phones for better fit */
+                min-height: 340px;
+            }
         }
     </style>
+
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            document.querySelector(".menu-button").addEventListener("click", function() {
-                document.querySelector(".nav-menu").classList.toggle("active");
-            });
+            var btn = document.querySelector(".menu-button");
+            if (btn) {
+                btn.addEventListener("click", function() {
+                    document.querySelector(".nav-menu").classList.toggle("active");
+                });
+            }
         });
     </script>
+
+    <!-- PublicAlbum embed script (for Google Photos albums) -->
+    <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 </head>
 <body>
     <div class="logo">
         <img src="images/LogoInBlack.png" alt="Wedding Logo">
-        <button class="menu-button">☰</button>
+        <button class="menu-button" aria-label="Open menu">☰</button>
     </div>
+
     <nav>
         <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
@@ -142,10 +160,19 @@
             <li><a href="RSVP.html">RSVP</a></li>
         </ul>
     </nav>
-    <div class="title">Gallery</div>
-    <div class="text-box">
-        As we get closer to the wedding and afterward, keep an eye on this page for beautiful photos from our special day and beyond!
-    </div>
+
+    <main class="gallery-wrap">
+        <!-- Google Photos album embed -->
+        <div class="pa-gallery-player-widget"
+             data-link="https://photos.app.goo.gl/U4R5Xchpdx6C5Af49"
+             data-title="Wedding Gallery"
+             data-description="Our photos"
+             data-allowfullscreen="true">
+        </div>
+    </main>
+
+    <!-- Kitties moved to the very bottom -->
     <img src="images/FlowerBois.png" alt="Flower Crown Kitties" class="flower-image">
+
 </body>
 </html>
