--- a/Gallery.html
+++ b/Gallery.html
@@ -72,26 +72,22 @@
             font-family: Georgia, serif;
         }
 
-        /* ===== Gallery Embed ===== */
+        /* ===== Gallery Grid Embed ===== */
         .gallery-wrap {
             max-width: 1200px;
             margin: 20px auto 0;
             padding: 0 16px;
         }
-        .pa-gallery-player-widget {
+        /* Optional wrapper if you want extra spacing around the grid */
+        .pa-gallery-grid-widget {
             width: 100%;
-            height: 70vh;         /* good default “fit to page” */
-            min-height: 420px;    /* ensures usability on short screens */
-            display: none;        /* PublicAlbum toggles to block when ready */
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+            margin: 0 auto;
         }
 
         /* ===== Bottom Image (Kitties) ===== */
         .flower-image {
             display: block;
-            margin: 32px auto 24px; /* space above and below */
+            margin: 32px auto 24px;
             width: 100%;
             max-width: 1200px;
             height: auto;
@@ -122,10 +118,6 @@
                 margin: 10px 0;
                 text-align: center;
             }
-            .pa-gallery-player-widget {
-                height: 65vh;   /* a bit shorter on phones for better fit */
-                min-height: 340px;
-            }
         }
     </style>
 
@@ -140,7 +132,7 @@
         });
     </script>
 
-    <!-- PublicAlbum embed script (for Google Photos albums) -->
+    <!-- PublicAlbum embed script (works for grid + slideshow) -->
     <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 </head>
 <body>
@@ -161,17 +153,16 @@
         </ul>
     </nav>
 
+    <!-- Grid of individual images -->
     <main class="gallery-wrap">
-        <!-- Google Photos album embed -->
-        <div class="pa-gallery-player-widget"
+        <div class="pa-gallery-grid-widget"
              data-link="https://photos.app.goo.gl/U4R5Xchpdx6C5Af49"
              data-title="Wedding Gallery"
-             data-description="Our photos"
-             data-allowfullscreen="true">
+             data-description="Our photos">
         </div>
     </main>
 
-    <!-- Kitties moved to the very bottom -->
+    <!-- Kitties at the very bottom -->
     <img src="images/FlowerBois.png" alt="Flower Crown Kitties" class="flower-image">
 
 </body>
