--- a/Gallery.html
+++ b/Gallery.html
@@ -131,6 +131,14 @@
             }
             .thumb-grid { gap: 8px; }
             .thumb img { height: 150px; }
+            
+            .glightbox-container .gslide img {
+              max-width: 100%;
+              max-height: 100vh;  /* don’t exceed viewport height */
+              width: auto;
+              height: auto;
+              object-fit: contain;
+            }
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
