--- a/Gallery.html
+++ b/Gallery.html
@@ -1,150 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="icon" href="images/LogoInBlack.png?v=2" type="image/png">
-    <style>
-        @font-face {
-            font-family: 'Love Script';
-            src: url('Love script.ttf') format('truetype');
-        }
-        @font-face {
-            font-family: 'Kingstyle';
-            src: url('Kingstyle.ttf') format('truetype');
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Brush Script MT", cursive;
-            background-color: #ffeee2;
-        }
-        .logo {
-            text-align: center;
-            background-color: #f7ddbb;
-            padding: 10px 0;
-            position: relative;
-            top: 0;
-            width: 100%;
-            z-index: 20;
-        }
-        .logo img {
-            width: 100px;
-            height: auto;
-        }
-        .menu-button {
-            display: none;
-            font-size: 24px;
-            background: none;
-            border: none;
-            cursor: pointer;
-            position: fixed;
-            top: 15px;
-            right: 20px;
-            z-index: 100;
-            background-color: #f7ddbb;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        nav {
-            background-color: #f7ddbb;
-            padding: 15px 0;
-            position: relative;
-            width: 100%;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-            z-index: 10;
-        }
-        .nav-menu {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-        .nav-menu li {
-            margin: 0 15px;
-        }
-        .nav-menu li a {
-            text-decoration: none;
-            color: black;
-            font-size: 18px;
-            font-family: Georgia, serif;
-        }
-        .gallery-wrap {
-            max-width: 1200px;
-            margin: 20px auto 0;
-            padding: 0 16px;
-        }
-        .thumb-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-            gap: 12px;
-        }
-        .thumb {
-            display: block;
-            position: relative;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 6px 14px rgba(0,0,0,0.08);
-        }
-        .thumb img {
-            width: 100%;
-            height: 190px;
-            object-fit: cover;
-            display: block;
-            transition: transform .25s ease;
-        }
-        .thumb:hover img, .thumb:focus img {
-            transform: scale(1.03);
-        }
-        .flower-image {
-            display: block;
-            margin: 32px auto 24px;
-            width: 100%;
-            max-width: 1200px;
-            height: auto;
-            padding: 0 16px;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery</title>
+  <link rel="icon" href="images/LogoInBlack.png?v=2" type="image/png" />
 
-            .glightbox-container .gslide-image img {
-              max-width: 95vw;   /* don't exceed viewport width */
-              max-height: 90vh;  /* don't exceed viewport height */
-              width: auto;
-              height: auto;
-              object-fit: contain;
-            }
-            
-            @media (max-width: 768px) {
-              .menu-button {
-                display: block;
-              }
-              .nav-menu {
-                display: none;
-                flex-direction: column;
-                position: fixed;
-                top: 50px;
-                right: 20px;
-                background-color: #f7ddbb;
-                width: 200px;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-                padding: 10px;
-                border-radius: 5px;
-              }
-              .nav-menu.active {
-                display: flex;
-              }
-              .nav-menu li {
-                margin: 10px 0;
-                text-align: center;
-              }
-            }
-        
-            .thumb-grid { gap: 8px; }
-            .thumb img { height: 150px; }
-        }
-    </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
+  <style>
+    @font-face {
+      font-family: "Love Script";
+      src: url("Love script.ttf") format("truetype");
+    }
+    @font-face {
+      font-family: "Kingstyle";
+      src: url("Kingstyle.ttf") format("truetype");
+    }
+
+    /* Base */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Brush Script MT", cursive;
+      background-color: #ffeee2;
+    }
+
+    /* Header + nav */
+    .logo {
+      text-align: center;
+      background-color: #f7ddbb;
+      padding: 10px 0;
+      position: relative;
+      top: 0;
+      width: 100%;
+      z-index: 20;
+    }
+    .logo img {
+      width: 100px;
+      height: auto;
+    }
+    .menu-button {
+      display: none;
+      font-size: 24px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      position: fixed;
+      top: 15px;
+      right: 20px;
+      z-index: 100;
+      background-color: #f7ddbb;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    nav {
+      background-color: #f7ddbb;
+      padding: 15px 0;
+      position: relative;
+      width: 100%;
+      box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+      z-index: 10;
+    }
+    .nav-menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+    .nav-menu li { margin: 0 15px; }
+    .nav-menu li a {
+      text-decoration: none;
+      color: #000;
+      font-size: 18px;
+      font-family: Georgia, serif;
+    }
+
+    /* Gallery grid */
+    .gallery-wrap {
+      max-width: 1200px;
+      margin: 20px auto 0;
+      padding: 0 16px;
+    }
+    .thumb-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap: 12px;
+    }
+    .thumb {
+      display: block;
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+    }
+    .thumb img {
+      width: 100%;
+      height: 190px;
+      object-fit: cover;
+      display: block;
+      transition: transform .25s ease;
+    }
+    .thumb:hover img,
+    .thumb:focus img { transform: scale(1.03); }
+
+    .flower-image {
+      display: block;
+      margin: 32px auto 24px;
+      width: 100%;
+      max-width: 1200px;
+      height: auto;
+      padding: 0 16px;
+    }
+
+    /* Mobile */
+    @media (max-width: 768px) {
+      .menu-button { display: block; }
+      .nav-menu {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        top: 50px;
+        right: 20px;
+        background-color: #f7ddbb;
+        width: 200px;
+        box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+        padding: 10px;
+        border-radius: 5px;
+      }
+      .nav-menu.active { display: flex; }
+      .nav-menu li { margin: 10px 0; text-align: center; }
+
+      /* slightly tighter thumbs on small screens */
+      .thumb-grid { gap: 8px; }
+      .thumb img { height: 150px; }
+    }
+  </style>
+
+  <!-- GLightbox CSS must load BEFORE our overrides -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+
+  <!-- Our GLightbox overrides MUST come after its CSS -->
+  <style>
+    /* Lock page scroll while overlay is open (prevents body scrollbar) */
+    body.glightbox-open { overflow: hidden; }
+
+    /* Keep slide media within the viewport height */
+    .glightbox-container .gslide-media,
+    .glightbox-container .gslide-image { max-height: 90vh; }
+
+    /* Fit image neatly without forcing scrollbars */
+    .glightbox-container .gslide-image img {
+      max-width: 95vw !important;
+      max-height: 90vh !important;
+      width: auto !important;
+      height: auto !important;
+      object-fit: contain;
+      display: block;
+    }
+  </style>
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js" defer></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
